fixed link alignement

--- a/source/scss/templates/_navigation.scss
+++ b/source/scss/templates/_navigation.scss
@@ -41,6 +41,7 @@
 }
 
 .nav-item {
+  text-align: center;
   padding: 20px 10px;
   @include desktop {
     padding: 0;
